[package]
name = "wvr"
version = "0.1.0"
authors = ["gurke.club <contact@gurke.club>"]
edition = "2018"

[dependencies]
glium = "0.27"
midir = "0.5"
serde_json = "1.0"
serde =  {version="1.0", features = ["derive"] }
serde_yaml = "0.8"
ron = "0.6"
message-io = "0.4"
directories-next = "1.0"
clap = "*"
toml = "*"
reqwest = { version = "0.10", features = ["blocking"] }
image = "0.23"
anyhow = "1.0"
wvr-data = {git = "https://github.com/gurkeclub/wvr-data.git", branch="main"}
wvr-com = {git = "https://github.com/gurkeclub/wvr-com.git", branch="main"}
wvr-image = {git = "https://github.com/gurkeclub/wvr-image.git", branch="main"}
wvr-video = {git = "https://github.com/gurkeclub/wvr-video.git", branch="main"}
wvr-cam = {git = "https://github.com/gurkeclub/wvr-cam.git", branch="main"}
wvr-shadertoy = {git = "https://github.com/gurkeclub/wvr-shadertoy.git", branch="main"}
wvr-midi = {git = "https://github.com/gurkeclub/wvr-midi.git", branch="main"}
wvr-rendering = {git = "https://github.com/gurkeclub/wvr-rendering.git", branch="main"}
