[package]
name = "wvr"
version = "0.1.27"
authors = ["gurke.club <contact@gurke.club>"]
edition = "2018"

[dependencies]
anyhow = "1.0" 
clap = "3.0.0-beta.2"
serde_json = "1.0"
git2 = "0.13"

glium = "0.29"
image = "0.23"

wvr-data = {git = "https://github.com/gurkeclub/wvr-data.git", branch="main"}
wvr-com = {git = "https://github.com/gurkeclub/wvr-com.git", branch="main"}
wvr-image = {git = "https://github.com/gurkeclub/wvr-image.git", branch="main"}
wvr-video = {git = "https://github.com/gurkeclub/wvr-video.git", branch="main"}
wvr-cam = {git = "https://github.com/gurkeclub/wvr-cam.git", branch="main"}
wvr-shadertoy = {git = "https://github.com/gurkeclub/wvr-shadertoy.git", branch="main"}
wvr-midi = {git = "https://github.com/gurkeclub/wvr-midi.git", branch="main"}
wvr-rendering = {git = "https://github.com/gurkeclub/wvr-rendering.git", branch="main"}
